# RustAPI

./: .env  Cargo.toml  README.md
migrations/2022-12-20-045439_users/: up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  users_api.rs
src/controllers/: user_controller.rs
src/models/: types.rs
src/repository/: postgres.rs
src/routes/: users.rs
