[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = "0.4.23"
dotenvy = "0.15.6"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = {version="0.6.2",features=["postgres","runtime-tokio-rustls","chrono","time"]}
tokio = {version="1.23.0", features=["full"]}
uuid = {version="1.2.2", features=["v4"]}
